# comborag

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
comborag/: agent.py  environment.py  grader.py  indexer.py  main.py  rag.py  requirements.txt  web_indexer.py
src/comborag/: __init__.py  generator.py  grader.py  indexer.py  main.py  rag.py  retriever.py  router.py  web_indexer.py
stuff/: grader.py  multi-agent-collaboration.ipynb
tests/: test_grader.py
